backup_individuals/sjeng/use_undefined_identifier/c1/HandlePtell
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePtell/src/partner.c:556:20: error: use of undeclared identifier 'off_41899E'
if ( !strncmp( v1, off_41899E, 3uLL) ) 
                   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePtell/src/partner.c:587:22: error: use of undeclared identifier 'unk_418DF5'
v2 = ( const char *)&unk_418DF5; 
                     ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePtell/src/partner.c:593:22: error: use of undeclared identifier 'unk_418E1D'
v2 = ( const char *)&unk_418E1D; 
                     ^
3 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/HandlePtell/src/obj/partner.o] Error 1
